[package]
name = "horreum"
version = "0.1.0"
authors = ["ikanago <28985004+ikanago@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
clap = "2.3.33"
qstring = "0.7"
tokio = "0.2.22"
futures = "0.3.5"
hyper = "0.13.8"
thiserror = "1.0.20"

[dev-dependencies]
criterion = "0.3.3"
lazy_static = "1.4.0"
rand = "0.7.3"

[[bench]]
name = "bench_main"
harness = false
