[package]
name = "horreum"
version = "0.1.0"
authors = ["ikanago <28985004+ikanago@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
clap = "2.3.33"
qstring = "0.7"
tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3.5"
hyper = "0.13.8"
thiserror = "1.0.20"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
bytes = "0.6.0"

[dev-dependencies]
criterion = "0.3.3"
lazy_static = "1.4.0"
rand = "0.7.3"

[[bench]]
name = "bench_main"
harness = false
