[package]
name = "horreum"
version = "0.1.0"
authors = [ "ikanago <28985004+ikanago@users.noreply.github.com>" ]
description = "Persistent key-value store."
edition = "2018"

[dependencies]
bincode = "1.3.1"
env_logger = "0.8.2"
futures = "0.3.5"
hyper = { version = "0.14.1", features = [ "server", "http1", "tcp" ] }
log = "0.4.11"
qstring = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
structopt = "0.3.21"
thiserror = "1.0.20"
tokio = { version = "1.0.0", features = [ "full" ] }

[dev-dependencies]
criterion = "0.3.3"
lazy_static = "1.4.0"
rand = "0.7.3"

[[bench]]
name = "bench_main"
harness = false
